<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:paddingTop="32dp"
    android:gravity="center">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:hintEnabled="false"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:hintEnabled="false"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:hintEnabled="false"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_edit"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center"
        android:textColor="@color/primary"/>

</LinearLayout>