<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="ScrollViewCount"
 >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primary"
        >
        <!-- Header -->
        <RelativeLayout
            android:id="@+id/rl_profile_header"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            >
            <ImageView
                android:id="@+id/iv_cover"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_cover"

                />
            <RelativeLayout
                android:id="@+id/rv_header"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/dark_green_50"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/my_activity"
                    android:textSize="20sp"
                    android:textColor="@color/primary"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_close"
                    android:importantForAccessibility="no"
                    />
            </RelativeLayout>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_profile_card"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                app:cardCornerRadius="60dp"
                app:strokeColor="@color/primary"
                app:strokeWidth="3dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_profile"

                    />
            </com.google.android.material.card.MaterialCardView>
            <ImageView
                android:id="@+id/ic_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/iv_cover"
                android:padding="8dp"

                />
        </RelativeLayout>

        <!-- Profile name and bio -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >
            <TextView
                android:id="@+id/txt_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:textSize="20sp"
                android:textColor="@color/secondary"
                />
            <TextView
                android:id="@+id/txt_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:layout_marginStart="8dp"
                android:textSize="20sp"
                android:textColor="@color/secondary"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/txt_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group"
            android:textSize="16sp"
            android:textColor="@color/primary_dark"
            android:layout_gravity="center_horizontal"
            />

        <!-- Tab -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="4dp"
            app:cardBackgroundColor="@color/primary_dark"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="6dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year1"
                    android:textSize="16sp"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/dark_green_30"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year2"
                    android:textSize="16sp"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/secondary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year3"
                    android:textSize="16sp"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/secondary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year4"
                    android:textSize="16sp"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/secondary"
                    />
            </TableRow>
        </com.google.android.material.card.MaterialCardView>

        <!-- Activity eday -->
        <LinearLayout
            android:id="@+id/ll_activity_eday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="32dp"
            >
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_eday"
                android:layout_width="150dp"
                android:layout_height="100dp"
                app:strokeWidth="0dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_eday"
                    />
            </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary"
                    android:text="@string/eday_title"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_dark"
                    android:text="@string/eday_date"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_more_detail"
                />
        </LinearLayout>

        <!-- Activity khmer new year -->
        <LinearLayout
            android:id="@+id/ll_activity_khmer_new_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="16dp"
            >
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_khmer_new_year"
                android:layout_width="150dp"
                android:layout_height="100dp"
                app:strokeWidth="0dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_khmer_new_year"
                    />
            </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary"
                    android:text="@string/khmer_new_year_title"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_dark"
                    android:text="@string/khmer_new_year_date"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_more_detail"
                />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <!-- Footer -->
        <TextView
            android:id="@+id/txt_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_green_30"
            android:text="@string/version"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"

            />
    </LinearLayout>
</ScrollView>